Collapse of sidenav and images

--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -1,24 +1,37 @@
 <img style="position: absolute;" src="../../../../assets/images/sidebar-background.png">
-<div class="navigation">
+<div ng-class="{navigation:true, collapsed:sideNavCollapsed}">
 	<div style="text-align: center;padding-bottom: 38px;border-bottom: 1px solid rgba(255,255,255,0.1);">
 		<img class="logo" src="../../../../assets/images/white-logo.png" alt="">		
+		<img class="logo-min" src="../../../../assets/images/white-logo-min.png" alt="">		
 	</div>
 	<a ui-sref-active="active" ui-sref="main.dashboard">
+		<img class="icon" src="../../../../assets/images/dashboard.png" alt="">
+		<img class="icon-active" src="../../../../assets/images/dashboard-active.png" alt="">
 		Dashboard
 	</a>
 	<a ui-sref-active="active" ui-sref="main.brokerage">
+		<img class="icon" src="../../../../assets/images/brokerage.png" alt="">
+		<img class="icon-active" src="../../../../assets/images/brokerage-active.png" alt="">
 		Brokerage
 	</a>
 	<a ui-sref-active="active" ui-sref="main.messages">
+		<img class="icon" src="../../../../assets/images/messages.png" alt="">
+		<img class="icon-active" src="../../../../assets/images/messages-active.png" alt="">
 		Messages
 	</a>
 	<a ui-sref-active="active" ui-sref="main.document">
+		<img class="icon" src="../../../../assets/images/documents.png" alt="">
+		<img class="icon-active" src="../../../../assets/images/documents-active.png" alt="">
 		Documents
 	</a>
 	<a ui-sref-active="active" ui-sref="main.calendar">
+		<img class="icon" src="../../../../assets/images/calendar.png" alt="">
+		<img class="icon-active" src="../../../../assets/images/calendar-active.png" alt="">
 		Calendar
 	</a>
 	<a ui-sref-active="active" ui-sref="main.help">
+		<img class="icon" src="../../../../assets/images/help.png" alt="">
+		<img class="icon-active" src="../../../../assets/images/help-active.png" alt="">
 		Help
 	</a>
 </div>
