--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -1,6 +1,6 @@
 <div class="toolbar">
 	<div class="display-area">
-		<img src="../../../../assets/images/hide-bar.png" style="padding: 0 13px;">		
+		<img ng-click="sideNavCollapsed=!sideNavCollapsed" src="../../../../assets/images/hide-bar.png" style="padding: 0 13px;cursor: pointer;outline: none;">	
 		<div class="grow">{{breadCrumb}}</div>
 		<img src="../../../../assets/images/search.png" style="padding: 0 13px;">		
 		<img src="../../../../assets/images/flag.png" style="padding: 0 13px;">
