Adding appointments to dashboard

--- a/src/app/components/main/documents/documents.html
+++ b/src/app/components/main/documents/documents.html
@@ -1,3 +1,5 @@
+<div class="flex-wrapper">
 <div ng-repeat="document in ::vm.documents">
-<document-pane style="float: left; margin: 20px" document="document"></document-pane>
+	<document-pane style="float: left; margin: 20px" document="document"></document-pane>
+</div>	
 </div>
