--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -1,3 +1,49 @@
-<div>
-	Dashboard Area
+<div class="dashboard-area">
+	<div class="left">
+		<div class="appointments">
+			<h2>Appointments</h2>
+			<div class="appointment">
+				<div class="date">
+					<div style="font-size: 24px;">27th</div>
+					<div style="opacity: 0.4;padding: 4px; border-bottom: 1px dotted;">Oct 16</div>
+					<div style="font-size: 12px; opacity: 0.3;padding: 3px;">07:20 am</div>
+				</div>
+				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<div class="detail">
+					<div style="font-size: 14px;margin-bottom: 3px;">Standard Chartered Bank</div>
+					<div style="margin-bottom: 17px;opacity: 0.4;">Meeting with Standard Chartered Bank</div>
+					<div>
+						<a class="pending-btn">Pending</a>
+						<a class="conference-btn">Join Conference</a>
+					</div>
+				</div>
+			</div>
+			<div class="appointment">
+				<div class="date">
+					<div style="font-size: 24px;">27th</div>
+					<div style="opacity: 0.4;padding: 4px; border-bottom: 1px dotted;">Oct 16</div>
+					<div style="font-size: 12px; opacity: 0.3;padding: 3px;">07:20 am</div>
+				</div>
+				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<div class="detail">
+					<div style="font-size: 14px;margin-bottom: 3px;">Bank of America</div>
+					<div style="margin-bottom: 17px;opacity: 0.4;">Meeting with Bank of America</div>
+					<div>
+						<a class="completed-btn">Completed</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="messages">
+			<h2>New Messages</h2>
+		</div>
+	</div>
+	<div class="right">
+		<div class="statistics">
+			<h2>Account Statistics</h2>
+		</div>
+		<div class="brokerage">
+			<h2>Brokerage Applications</h2>
+		</div>
+	</div>
 </div>
