--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -20,11 +20,11 @@
 			</div>
 			<div class="appointment">
 				<div class="date">
-					<div style="font-size: 24px;">27th</div>
+					<div style="font-size: 24px;">26th</div>
 					<div style="opacity: 0.4;padding: 4px; border-bottom: 1px dotted;">Oct 16</div>
-					<div style="font-size: 12px; opacity: 0.3;padding: 3px;">07:20 am</div>
+					<div style="font-size: 12px; opacity: 0.3;padding: 3px;">08:20 am</div>
 				</div>
-				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="../../../../assets/images/bank-of-america.png">
 				<div class="detail">
 					<div style="font-size: 14px;margin-bottom: 3px;">Bank of America</div>
 					<div style="margin-bottom: 17px;opacity: 0.4;">Meeting with Bank of America</div>
@@ -44,6 +44,36 @@
 		</div>
 		<div class="brokerage">
 			<h2>Brokerage Applications</h2>
+			<div class="brokerage-item">
+				<div class="broker-logo">
+					<img src="../../../../assets/images/posb.png">
+
+				</div>
+				<div class="detail">
+					Post Office Savings Bank
+					<a class="pending-btn" style="margin-top: 10px;">Pending</a>
+				</div>				
+			</div>
+			<div class="brokerage-item">
+				<div class="broker-logo">
+					<img src="../../../../assets/images/unionbank.png">
+
+				</div>
+				<div class="detail">
+					Union Bank of India
+					<a class="pending-btn" style="margin-top: 10px;">Pending</a>
+				</div>				
+			</div>
+			<div class="brokerage-item">
+				<div class="broker-logo">
+					<img src="../../../../assets/images/hdfc.png">
+
+				</div>
+				<div class="detail">
+					The Housing Development Finance Corporation
+					<a class="pending-btn" style="margin-top: 10px;">Pending</a>
+				</div>				
+			</div>
 		</div>
 	</div>
 </div>
