--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -36,6 +36,42 @@
 		</div>
 		<div class="messages">
 			<h2>New Messages</h2>
+			<div style="background-color: #f2f6f8;" class="message">
+				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<div class="detail">
+					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
+					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
+				</div>
+				<div class="time">
+					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
+					<img src="../../../../assets/images/open-message.png">
+
+				</div>
+			</div>
+			<div class="message">
+				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<div class="detail">
+					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
+					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
+				</div>
+				<div class="time">
+					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
+					<img src="../../../../assets/images/open-message.png">
+
+				</div>
+			</div>
+			<div class="message">
+				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<div class="detail">
+					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
+					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
+				</div>
+				<div class="time">
+					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
+					<img src="../../../../assets/images/open-message.png">
+
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="right">
