--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -2,11 +2,11 @@
     <md-stepper id="stepper-demo" md-mobile-step-text="$ctrl.isMobileStepText" md-vertical="$ctrl.isVertical" md-linear="$ctrl.isLinear" md-alternative="$ctrl.isAlternative">
         <md-step md-label="Brokerages">
             <md-step-body>
-                <h3>Premium Partners</h3>
+                <h3 class="partnersHeader">Premium Partners</h3>
                 POSB<br> DBS
                 <br> UOB
                 <br> ICICI Bank<br><br>
-                <h3>All Partners</h3>
+                <h3 class="partnersHeader">All Partners</h3>
                 Citibank<br> Bank Of America<br> Standard Chartered<br> ICICI Bank<br> Axis Bank<br> HDFC Bank<br> UnionBank
                 <br>
             </md-step-body>
@@ -18,7 +18,7 @@
         </md-step>
         <md-step md-label="Personal Details">
             <md-step-body>
-                <form name="personalDetailsForm" class="personalDetailsForm">
+                <form name="personalDetailsForm" class="detailsForm">
                     <div layout="row">
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
@@ -51,7 +51,7 @@
                                 <label>Country Code</label>
                                 <input required ng-model="user.countryCode" minlength="6" maxlength="100">
                             </md-input-container>
-                            <md-input-container class="md-block" flex="100 " flex-offset="10" style="float:left;">
+                            <md-input-container class="md-block" flex="100" flex-offset="10" style="float:left;">
                                 <label>Hand Phone</label>
                                 <input required ng-model="user.phoneNum" minlength="6" maxlength="100">
                             </md-input-container>
@@ -88,8 +88,8 @@
                                 <md-datepicker ng-model="user.bdayDate"></md-datepicker>
                             </md-input-container>
                             <md-input-container class="md-block" flex-gt-sm>
-                                <label>Nationality*</label>
-                                <md-select ng-model="ctrl.userState">
+                                <label>Nationality</label>
+                                <md-select ng-model="country">
                                     <md-option><em>Singapore</em></md-option>
                                     <md-option ng-repeat="country in vm.countries" ng-value="country.name">
                                         {{country.name}}
@@ -124,8 +124,7 @@
                         <div flex="50" class="col" style="margin-right:30px;">
                             <md-input-container class="md-block">
                                 <label>Employment Status</label>
-                                <md-select ng-model="ctrl.userState">
-                                    <md-option><em>Self Employed</em></md-option>
+                                <md-select ng-model="empstatus">
                                     <md-option ng-repeat="empstatus in vm.empStatuses" ng-value="empstatus.name">
                                         {{empstatus.name}}
                                     </md-option>
@@ -139,7 +138,127 @@
         </md-step>
         <md-step md-label="KYC">
             <md-step-body>
-                <p>TAX RESIDENCE</p>
+                <form name="kycDetailsForm" class="detailsForm">
+                    <div layout="row">
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Tax Residence</label>
+                                <input required ng-model="user.taxResidence" name="taxResidence" minlength="6" maxlength="100">
+
+                                <div ng-messages="kycDetailsForm.taxResidence.$error" role="alert">
+                                    <div ng-message-exp="['required', 'minlength', 'maxlength']">
+                                        Please enter a valid tax residence.
+                                    </div>
+                                </div>
+                            </md-input-container>
+                        </div>
+                        <div flex="50" class="col" style="margin-right:30px;">
+                            <md-input-container class="md-block" flex="30" style="float:left;">
+                                <label>Currency</label>
+                                <md-select ng-model="currency">
+                                    <md-option ng-repeat="currency in vm.currencies" ng-value="currency.name">
+                                        {{currency.name}}
+                                    </md-option>
+                                </md-select>
+                            </md-input-container>                                
+                            <md-input-container class="md-block" flex="100" flex-offset="10" style="float:left;">
+                                <label>Annual Income</label>
+                                <input required ng-model="user.annualIncome" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                    </div>
+
+                    <div layout="row" style="margin-top:0px;">
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Source of Wealth</label>
+                                <input required ng-model="user.sourceWealth" name="sourceWealth" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Source of Fund</label>
+                                <input required ng-model="user.sourceFund" name="sourceFund" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                    </div>
+
+                    <div layout="row" style="margin-top:0px;">
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Estimated Liquid Assets</label>
+                                <input required ng-model="user.estimatedLiquidAssets" name="estimatedLiquidAssets" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Investigation Objectives</label>
+                                <input required ng-model="user.investigationObjectives" name="investigationObjectives" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                    </div>
+
+                    <div layout="row" style="margin-top:0px;">
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Likely frequency of Traders</label>
+                                <input required ng-model="user.likelyFrequency" name="likelyFrequency" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Bank Reference</label>
+                                <input required ng-model="user.bankRef" name="bankRef" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                    </div>
+
+                    <div layout="row" style="margin-top:0px;">
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Bank account number</label>
+                                <input required ng-model="user.bankAcc" name="bankAcc" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Language Proficiency</label>
+                                <input required ng-model="user.languagePro" name="languagePro" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                    </div>
+
+                    <div layout="row" style="margin-top:0px;">
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Academic Qualification</label>
+                                <input required ng-model="user.academicQualification" name="academicQualification" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Mother’s Maiden Name</label>
+                                <input required ng-model="user.motherMaidenName" name="motherMaidenName" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                    </div>
+
+                    <div layout="row" style="margin-top:0px;">
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Name of Spouse</label>
+                                <input ng-model="user.spouseName" name="spouseName" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                        <div flex="50" class="col" style="margin-left:30px;">
+                            <md-input-container class="md-block" flex-gt-sm>
+                                <label>Spouse’s Passport / NRIC Number</label>
+                                <input ng-model="user.spousePassport" name="spousePassport" minlength="6" maxlength="100">
+                            </md-input-container>
+                        </div>
+                    </div>
+
+                </form>
             </md-step-body>
         </md-step>
         <md-step md-label="Selection of Timeslot">
