--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -86,6 +86,31 @@ md-input-container.md-block {
 	margin-top: 0px;
 }
 
-.personalDetailsForm {
+.detailsForm {
 	margin-top:45px;
+}
+
+.partnersHeader {
+	font-family: Lato;
+	font-size: 16px;
+	font-weight: 500;
+	color: #4f6379;
+	text-align: center;
+}
+
+.partnerBox {
+	width: 200px;
+	height: 100px;
+	object-fit: contain;
+	border-radius: 5px;
+	background-color: #ffffff;
+	background-color: var(--white);
+	border: solid 1px #e7ecf1;
+	border: solid 1px var(--pale-grey);
+}
+
+.partnerSelected {
+	border-radius: 5px;
+	border: solid 1px #3aafa5;
+	border: solid 1px var(--greeny-blue);
 }
