--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -3,9 +3,22 @@
         <md-step md-label="Brokerages">
             <md-step-body>
                 <h3 class="partnersHeader">Premium Partners</h3>
-                POSB<br> DBS
-                <br> UOB
-                <br> ICICI Bank<br><br>
+                <div style="float:left;"><div class="partnerLogo">
+                    <div><img class="premiereIcon" src="../../../../assets/images/premiere.png"/></div>
+                    <center><img src="../../../../assets/images/partnerLogos/posb.png"/></center>
+                </div></div>
+                <div style="float:left;"><div class="partnerLogo">
+                    <div><img class="premiereIcon" src="../../../../assets/images/premiere.png"/></div>
+                    <center><img src="../../../../assets/images/partnerLogos/dbs.png"/></center>
+                </div></div>
+                <div style="float:left;"><div class="partnerLogo">
+                    <div><img class="premiereIcon" src="../../../../assets/images/premiere.png"/></div>
+                    <center><img src="../../../../assets/images/partnerLogos/uob.png"/></center>
+                </div></div>
+                <div style="float:left;"><div class="partnerLogo">
+                    <div><img class="premiereIcon" src="../../../../assets/images/premiere.png"/></div>
+                    <center><img src="../../../../assets/images/partnerLogos/icici.png"/></center>
+                </div></div>
                 <h3 class="partnersHeader">All Partners</h3>
                 Citibank<br> Bank Of America<br> Standard Chartered<br> ICICI Bank<br> Axis Bank<br> HDFC Bank<br> UnionBank
                 <br>
