brokerage fixes -- thanks to @shastri :)

--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -99,9 +99,11 @@ md-input-container.md-block {
 .partnersHeader {
 	font-family: Lato;
 	font-size: 16px;
-	font-weight: 500;
+	font-weight: 700;
 	color: #4f6379;
 	text-align: center;
+	margin-top: 40px;
+	width: 100%;
 }
 
 .partnerBox {
