--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -1,43 +1,43 @@
 <div layout="row">
     <md-stepper id="stepper-demo" md-mobile-step-text="$ctrl.isMobileStepText" md-vertical="$ctrl.isVertical" md-linear="$ctrl.isLinear" md-alternative="$ctrl.isAlternative">
         <md-step md-label="Brokerages">
-            <md-step-body flex style="width: 100%;">
+            <md-step-body layout="row" layout-wrap>
                 <h3 class="partnersHeader">Premium Partners</h3>
-                <div style="float:left;"><div class="partnerLogo">
+                <div class="partnerLogo">
                     <div><img class="premiereIcon" src="../../../../assets/images/premiere.png"/></div>
                     <center><img src="../../../../assets/images/partnerLogos/posb.png"/></center>
-                </div></div>
-                <div style="float:left;"><div class="partnerLogo">
+                </div>
+                <div class="partnerLogo">
                     <div><img class="premiereIcon" src="../../../../assets/images/premiere.png"/></div>
                     <center><img src="../../../../assets/images/partnerLogos/dbs.png"/></center>
-                </div></div>
-                <div style="float:left;"><div class="partnerLogo">
+                </div>
+                <div class="partnerLogo">
                     <div><img class="premiereIcon" src="../../../../assets/images/premiere.png"/></div>
                     <center><img src="../../../../assets/images/partnerLogos/uob.png"/></center>
-                </div></div>
-                <div style="float:left;"><div class="partnerLogo">
+                </div>
+                <div class="partnerLogo">
                     <div><img class="premiereIcon" src="../../../../assets/images/premiere.png"/></div>
                     <center><img src="../../../../assets/images/partnerLogos/icici.png"/></center>
-                </div></div>
+                </div>
                 <h3 class="partnersHeader">All Partners</h3>
-                <div style="float:left;"><div class="partnerLogo">
+                <div class="partnerLogo">
                     <center><img src="../../../../assets/images/partnerLogos/citibank.png"/></center>
-                </div></div>
-                <div style="float:left;"><div class="partnerLogo">
+                </div>
+                <div class="partnerLogo">
                     <center><img src="../../../../assets/images/partnerLogos/boa.png"/></center>
-                </div></div>
-                <div style="float:left;"><div class="partnerLogo">
+                </div>
+                <div class="partnerLogo">
                     <center><img src="../../../../assets/images/partnerLogos/schartered.png"/></center>
-                </div></div>
-                <div style="float:left;"><div class="partnerLogo">
+                </div>
+                <div class="partnerLogo">
                     <center><img src="../../../../assets/images/partnerLogos/axisbank.png"/></center>
-                </div></div>
-                <div style="float:left;"><div class="partnerLogo">
+                </div>
+                <div class="partnerLogo">
                     <center><img src="../../../../assets/images/partnerLogos/hdfc.png"/></center>
-                </div></div>
-                <div style="float:left;"><div class="partnerLogo">
+                </div>
+                <div class="partnerLogo">
                     <center><img src="../../../../assets/images/partnerLogos/uob.png"/></center>
-                </div></div>
+                </div>
             </md-step-body>
         </md-step>
         <md-step md-label="Documents">
