--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -77,6 +77,7 @@
 	<div class="right">
 		<div class="statistics">
 			<h2>Account Statistics</h2>
+			<progress-display />
 		</div>
 		<div class="brokerage">
 			<h2>Brokerage Applications</h2>
