--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -1,4 +1,4 @@
-.dashboard-area {
+.user-dashboard-area {
 	color: #4f6379;
     font-size: 16px;
     display: flex;
@@ -138,4 +138,7 @@
             }
         }
     }
+}
+.broker-dashboard-area {
+    
 }
