Added doc preview footer

--- a/src/app/components/main/documents/document.scss
+++ b/src/app/components/main/documents/document.scss
@@ -1,3 +1,5 @@
+$pale-grey: #e7ecf1;
+
 .document-icon {
 	min-height: 50px;
 	min-width: 30px;
@@ -67,4 +69,12 @@
 
 .dragover {
     border: 5px dashed blue;
+}
+
+.document-preview {
+  width: 800px;
+  height: 112px;
+  border-radius: 5px;
+  background-color: #f5f9fa;
+  border: solid 1px $pale-grey;
 }
