--- a/src/app/components/main/documents/document_preview.html
+++ b/src/app/components/main/documents/document_preview.html
@@ -2,4 +2,9 @@
 	ngf-drop ng-model="vm.picFile" ngf-pattern="image/*" class="cropArea">
 	<img style="max-width:100%;max-height:100%;vertical-align: middle;" ng-src="{{vm.picFile | ngfDataUrl}}" result-image="croppedDataUrl" ng-init="croppedDataUrl=''">
 	</img>
+
+	<div class="document-preview">
+		Fit inside document screen.
+		Place on contrasting background.
+	</div>
 </div>
