linear md stepper

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -1,5 +1,5 @@
 <div layout="row">
-    <md-stepper id="stepper-demo" md-mobile-step-text="$ctrl.isMobileStepText" md-vertical="$ctrl.isVertical" md-linear="$ctrl.isLinear" md-alternative="$ctrl.isAlternative">
+    <md-stepper id="stepper-demo" md-linear="true">
         <md-step md-label="Brokerages">
             <md-step-body layout="row" layout-wrap>
                 <h3 class="partnersHeader">Premium Partners</h3>
