--- a/src/app/components/messages/messages.html
+++ b/src/app/components/messages/messages.html
@@ -1,4 +1,4 @@
-<div layout="column">
+<div layout="column" style="min-height: 700px;">
 	<div layout="row">
 	<div layout="column" flex>
 		<md-content>
@@ -14,17 +14,27 @@
 			</md-tabs>
 		</md-content>
 	</div>
-	<div layout="row" class="email-reply" ng-show="vm.currentMessage" flex>
+	<div layout="row" class="email-reply" ng-show="vm.currentMessage" flex style="min-height: 700px;">
 		<div class="email-icon">
 			<!-- <img src="../../../../assets/images/1024-px-standard-charteredsvg.png"></img> -->
 		</div>
 		<div class="email-content">
+			<div>
 			<span style="font-weight: bold;">{{vm.currentMessage.from}}</span>
 			<div style="margin-top: 5px;">
 				{{vm.currentMessage.time}}
 			</div>
 			<div class="email-body">
 				{{vm.currentMessage.body}}
+			</div>
+			</div>
+			<div style="display: flex; align-items: center;">
+			<textarea style="width: 350px;height: 60px; display: flex; border-radius: 3px;background-color: white; border: solid 1px #e7ecf1">
+				
+			</textarea>
+			<md-button class="md-raised md-primary">
+				Send
+			</md-button>
 			</div>
 		</div>
 	</div>
